# citrus-logging

./: .gitignore  README.md  config.h.in  configure.ac
example/: .gitignore  Makefile.am  datetime.cpp  derived.cpp  derived.hpp  format-column.cpp  format-csv.cpp  format-json.cpp  format-prefix.cpp  format-sql.cpp  format-string.cpp  format-text.cpp  format-user.cpp  format-xml.cpp  format-zero.cpp  hostname.cpp  level.cpp  logger.cpp  memory-circular.cpp  memory-growing.cpp  memory-linear.cpp  message.cpp  record.cpp  sender.cpp  simple.cpp  support.cpp  support.hpp  target-buffer.cpp  target-file.cpp  target-http.cpp  target-memory.cpp  target-smtp.cpp  target-stream.cpp  target-syslog.cpp  template.cpp  utils-escape.cpp  utils-uuid.cpp
src/: .gitignore  Makefile.am  datetime.cpp  format.cpp  hostname.cpp  libcitrus-logging.pc  libcitrus-logging.pc.in  logger.cpp  logging.cpp  logging.hpp  message.cpp  record.cpp  sender.cpp  target.cpp
src/format/: column.cpp  csv.cpp  cvs.cpp  escape.cpp  escape.hpp  json.cpp  prefix.cpp  sql.cpp  string.cpp  text.cpp  user.cpp  xml.cpp  zero.cpp
src/memory/: circular.cpp  growing.cpp  linear.cpp  strategy.cpp
src/utils/: curl.cpp  curl.hpp  escape.cpp  escape.hpp  uuid.cpp  uuid.hpp
